# openmethod

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.adoc  README.md  build.jam
.github/workflows/: ci.yml
doc/: build_antora.sh  inplace_vptr.adoc  introduction.adoc  library-detail.adoc  local-playbook.yml  mrdocs.yml
doc/html/: index.html
doc/modules/ROOT/: nav.adoc
doc/modules/ROOT/examples/: CMakeLists.txt  accept_no_visitors.cpp  ast.cpp  ast_unique_ptr.cpp  ast_virtual_function.cpp  ast_virtual_function_2.cpp  dl_main.cpp  dl_shared.cpp  synopsis.cpp
doc/modules/ROOT/examples/custom_rtti/1/: custom_rtti.cpp
doc/modules/ROOT/examples/custom_rtti/2/: custom_rtti.cpp
doc/modules/ROOT/examples/dynamic_loading/: CMakeLists.txt  animals.hpp  jungle.cpp  nature.cpp
doc/modules/ROOT/examples/rolex/1/: employee.cpp  salesman.cpp
doc/modules/ROOT/examples/rolex/2/: roles.hpp
doc/modules/ROOT/examples/rolex/7/: main.cpp
doc/modules/ROOT/examples/shared_libs/: CMakeLists.txt  animals.hpp  dynamic_main.cpp  extensions.cpp  indirect_main.cpp  indirect_overriders.cpp  indirect_tiger.cpp  overriders.cpp  static_main.cpp  tiger.cpp
doc/modules/ROOT/examples/troubleshooting/: call_not_polymorphic.adoc  call_not_polymorphic.cpp  errors-to-adoc.py  fragments.adoc  match_method_not_visible.adoc  match_method_not_visible.cpp  match_method_not_visible.json  match_no_method.adoc  match_no_method.cpp  match_no_method.json  override_no_conversion.adoc  override_no_conversion.cpp  override_no_method.adoc  override_no_method.cpp  use_classes_missing_base.adoc  use_classes_missing_base.cpp  use_classes_missing_class.adoc  use_classes_missing_class.cpp  use_classes_missing_class.json  use_classes_missing_class_call.adoc  use_classes_missing_class_call.cpp
doc/modules/ROOT/examples/virtual_ptr_alt/1/: virtual_ptr_alt.cpp
doc/modules/ROOT/examples/virtual_ptr_alt/2/: virtual_ptr_alt.cpp
doc/modules/ROOT/pages/: BOOST_OPENMETHOD.adoc  BOOST_OPENMETHOD_CLASSES.adoc  BOOST_OPENMETHOD_DECLARE_OVERRIDER.adoc  BOOST_OPENMETHOD_DEFAULT_REGISTRY.adoc  BOOST_OPENMETHOD_DEFINE_OVERRIDER.adoc  BOOST_OPENMETHOD_ENABLE_RUNTIME_CHECKS.adoc  BOOST_OPENMETHOD_ID.adoc  BOOST_OPENMETHOD_INLINE_OVERRIDE.adoc  BOOST_OPENMETHOD_OVERRIDE.adoc  BOOST_OPENMETHOD_OVERRIDER.adoc  BOOST_OPENMETHOD_OVERRIDERS.adoc  BOOST_OPENMETHOD_REGISTER.adoc  BOOST_OPENMETHOD_TYPE.adoc  basics.adoc  core_api.adoc  custom_rtti.adoc  dynamic_loading.adoc  error_handling.adoc  friends.adoc  friendship.adoc  headers.adoc  index.adoc  introduction.adoc  macros.adoc  motivation.adoc  multiple_dispatch.adoc  namespaces.adoc  performance.adoc  ref_headers.adoc  registries_and_policies.adoc  shared_libraries.adoc  smart_pointers.adoc  troubleshooting.adoc  virtual_ptr_alt.adoc
doc/modules/ROOT/troubleshooting/: collect.py  match_method_not_visible.json  match_no_method.json
doc/tagfiles/: boost-openmethod-doxygen.tag.xml
doc/troubleshooting/: collect.py  match_method_not_visible.cpp  match_method_not_visible.json  match_no_method.cpp  match_no_method.json
include/boost/openmethod/: core.hpp  default_registry.hpp  initialize.hpp  inplace_vptr.hpp  macros.hpp  preamble.hpp
include/boost/openmethod/detail/: trace.hpp
include/boost/openmethod/interop/: boost_intrusive_ptr.hpp  std_any.hpp
include/boost/openmethod/policies/: default_error_handler.hpp  fast_perfect_hash.hpp  minimal_cover_hash.hpp  minimal_perfect_hash.hpp  static_rtti.hpp  std_rtti.hpp  stderr_output.hpp  throw_error_handler.hpp  vectored_error_handler.hpp  vptr_map.hpp  vptr_vector.hpp
meta/: libraries.json
test/: CMakeLists.txt  Jamfile  compile_fail_virtual_parameter_private_base_core.cpp  compile_fail_virtual_ptr_shared_not_const.cpp  test_class_registration.cpp  test_compiler.cpp  test_core.cpp  test_dispatch.cpp  test_dispatch_intrusive_ptr.cpp  test_dispatch_std_any.cpp  test_inplace_vptr.cpp  test_minimal_cover_hash.cpp  test_minimal_perfect_hash.cpp  test_n2216.cpp  test_policies.cpp  test_rolex.cpp  test_runtime_errors.cpp  test_shared_virtual_ptr_value_semantics.cpp  test_smart_virtual_ptr_value_semantics.cpp  test_unique_virtual_ptr_value_semantics.cpp  test_util.hpp  test_virtual_ptr_doc.cpp  test_virtual_ptr_value_semantics.hpp
test/cmake_subdir_test/: CMakeLists.txt
test/cmake_test/: CMakeLists.txt
test/dynamic_loading/: CMakeLists.txt  Jamfile  classes.hpp  lib_method.cpp  lib_overrider.cpp  lib_registry.cpp  main.cpp  method.cpp  method.hpp  overrider.cpp  registry.cpp  registry.hpp
